[package]
name = "smartlights"
version = "0.1.0"
authors = ["Tiziano Santoro <tiziano88@gmail.com>"]

[dependencies]
env_logger = "0.4"
iron = "*"
log = "0.3"
maplit = "0.1"
mote = "0.1.2"
params = "*"
rgb = "0.7.0"
router = "*"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
unicase = "*"
url = "1.5"
getopts = "0.2"
