[package]
name = "smartlights"
version = "0.1.2"
authors = ["Tiziano Santoro <tiziano88@gmail.com>"]

[lib]
name = "dummy"
path = "/dev/null"

[dependencies]
env_logger = "0.4"
futures = "0.1"
log = "0.3"
maplit = "1.0"
mote = "0.1.2"
reqwest = "0.8"
rgb = "0.7.0"
rocket = "0.3.6"
rocket_codegen = "0.3.6"
rocket_contrib = "0.3.6"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
staticfile = "*"
tokio-core = "0.1"
unicase = "1.4"
url = "1.5"
getopts = "0.2"
scroll_phat_hd = "0.3.2"
